@@ -35,6 +35,7 @@
 - API Change: Cell#setLayout renamed to setTable.
 - API Addition: Added Collections#allocateIterators. When true, iterators are allocated. When false (default), iterators cannot be used nested.
 - API Addition: Added Group#removeActorAt(int,boolean) to avoid looking up the actor index. Subclasses intending to take action when an actor is removed may need to override this new method.
+- API Change: If Group#addActorAfter is called with an afterActor not in the group, the actor is added as the last child (not the first).
 
 [1.9.9]
 - API Addition: Add support for stripping whitespace in PixmapPacker
